AC_INIT([mle],[1.0],[scratch.joint-0i@icloud.com])
AM_INIT_AUTOMAKE([gnu])
AC_CONFIG_SRCDIR([config.h.in])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_YACC
AC_PROG_LEX
AM_PROG_AR
AC_PROG_RANLIB

AC_LANG(C++)

# Checks for libraries.
# check for the math library. round can be replaced with another call in the lib
# AC_CHECK_LIB([m], [round])

# Checks for header files.
# AC_CHECK_HEADERS([arpa/inet.h netinet/in.h strings.h sys/socket.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
# AC_CHECK_FUNCS([bzero socket])

AC_CONFIG_FILES([Makefile
                 src/Makefile])
AC_OUTPUT
